--- a/181121_react-tsx/src/index/components/app/app.scss
+++ b/181121_react-tsx/src/index/components/app/app.scss
@@ -1,5 +1,12 @@
 .app {
-  color: red;
-  display: flex;
-  // font-size: 38px;
+  text-align: center;
+  .logo {
+    animation: logo_spin infinite 20s linear;
+    height: 80px;
+  }
+}
+
+@keyframes logo_spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
 }
